name:                typecheckTH
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cronburg/typecheckTH#readme
license:             BSD3
license-file:        LICENSE
author:              Karl Cronburg
maintainer:          karl@cs.tufts.edu
copyright:           2017 Karl Cronburg
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable typecheckTH-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typecheckTH
  default-language:    Haskell2010

test-suite typecheckTH-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typecheckTH
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cronburg/typecheckTH
