name:                typecheckTH
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cronburg/typecheckTH#readme
license:             BSD3
license-file:        LICENSE
author:              Karl Cronburg
maintainer:          karl@cs.tufts.edu
copyright:           2017 Karl Cronburg
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Grammar
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , parsec
                     , haskell-src-meta
                     , transformers
  default-language:    Haskell2010

test-suite typecheckTH-test
  type:                exitcode-stdio-1.0
  main-is:             test/Grammar.hs
  build-depends:       base
                     , typecheckTH
                     , template-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cronburg/typecheckTH
